--- a/DecAntique/Podfile
+++ b/DecAntique/Podfile
@@ -1,13 +1,15 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '15.0'
 
 target 'DecAntique' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for DecAntique
-
+    
+    # keyboard toolbar
     pod 'IQKeyboardManagerSwift'
+    # loading view like indicater
     pod 'MBProgressHUD'
 
 end
