--- a/Project-2/Project-2/Info.plist
+++ b/Project-2/Project-2/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>BebasNeue-Regular.ttf</string>
+		<string>Albertyne Font by Kelik (7NTypes).ttf</string>
 		<string>Akira Expanded Demo.ttf</string>
 		<string>Vogue.ttf</string>
 		<string>The Humble.ttf</string>
